...
@Composable
private fun DevToolsActionButtons(
    devViewModel: DevViewModel,
    isEnabled: Boolean
) {
    MenuButtonItem(
        text = "Seed Test Jobs (10)",
        iconRes = R.drawable.ic_check,
        onClick = { devViewModel.seedTestJobs() },
        enabled = isEnabled,
    )

    MenuButtonItem(
...
        iconRes = R.drawable.ic_check,
        onClick = { devViewModel.seedAvailabilityTestJobs() },
        enabled = isEnabled,
    )

    MenuButtonItem(
        text = "Clear All Jobs",
        iconRes = R.drawable.ic_delete_forever,
        onClick = { devViewModel.clearJobs() },
        enabled = isEnabled,
    )
}

...
