...

    Column(
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        // Order Status
        Text(
            text = "Order Active",
            style = MaterialTheme.typography.headlineSmall,
            fontWeight = FontWeight.Medium,
            color = MaterialTheme.colorScheme.primary
        )
        
        Spacer(modifier = Modifier.height(8.dp))
...
